Resolved overflow

--- a/src/ECommerceApp/components/ECommerceFooter/styles.css
+++ b/src/ECommerceApp/components/ECommerceFooter/styles.css
@@ -3,7 +3,7 @@
   color: #fff;
   font-weight: bold;
   padding: 34px;
-  width: 100%;
+  width: 100vw !important;
 }
 
 .contact-info-container{
